--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -14,11 +14,6 @@
         @include cssGrid(1rem, 1 );
         margin: auto;
         padding: 15vw;
-        border-image-slice:6% 6% 6% 5%;
-        border-image-width:1.5em 1.5em 1.5em 1.5em;
-        border-image-outset:0px 0px 0px 0px;
-        border-image-repeat:round round;
-        border-image-source: url(/img/icons/border.svg);
 
         *{
             @include flexAlignCenter;
